[package]
name = "nccl-jnpr-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "nccl_net_jnpr"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bindgen = "0.70.0"
env_logger = "0.11.5"
hostname = "0.4.0"
libc = "0.2"
portpicker = "0.1.1"
rand = "0.8.5"
rdma-sys = "0.3.0"
serde = { version = "1.0.209", features = ["derive", "serde_derive"] }
# ibverbs uses branch v2
ibverbs-rs = { git = "https://github.com/michaelhenkel/ibverbs-rs", branch = "v2" }
log = "0.4.22"

[build-dependencies]
bindgen = "0.70.0"

#[build]
#rustflags = ["-C", "target-cpu=native"]

#[profile.release]
#opt-level = 3
#lto = true
#codegen-units = 1
#incremental = false
#panic = 'abort'
#overflow-checks = false

